[package]
name = "rune"
version = "1.0.0"
authors = ["Safin Singh <safinsingh.dev@gmail.com>"]
edition = "2018"
license = "MIT"
description = "An extensible task execution and generation tool"
repository = "https://github.com/safinsingh/rune"
readme = "README.md"
keywords = ["command-line-utilities", "execution", "task-runner"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
colored = "2.0.0"
clap = "3.0.0-beta.1"

